--- a/core/index.html
+++ b/core/index.html
@@ -25,6 +25,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
+    <!-- QR Code Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.3/build/qrcode.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.js"></script>
+
+    <!-- Supabase Client -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.3/dist/umd/supabase.min.js"></script>
+
     <!-- Modular Stylesheets -->
     <link rel="stylesheet" href="../src/styles/variables.css">
     <link rel="stylesheet" href="../src/styles/modern-ui.css">
@@ -95,6 +102,10 @@
                 <a href="#" class="nav-item" id="nav-reports">
                     <i class="fas fa-chart-bar"></i>
                     <span>Reports</span>
+                </a>
+                <a href="#" class="nav-item" id="nav-scanner">
+                    <i class="fas fa-qrcode"></i>
+                    <span>QR Scanner</span>
                 </a>
                 <a href="#" class="nav-item" id="nav-admin" style="display: none;">
                     <i class="fas fa-shield-alt"></i>
@@ -190,8 +201,91 @@
                                     <i class="fas fa-save"></i>
                                     <span>Save Changes</span>
                                 </button>
+                                <button type="button" class="action-btn secondary" id="show-qr-code-btn">
+                                    <i class="fas fa-qrcode"></i>
+                                    <span>My QR Code</span>
+                                </button>
                             </div>
                         </form>
+                    </div>
+                </div>
+            </section>
+
+            <!-- QR Scanner Section -->
+            <section class="content-section" id="scanner-section">
+                <div class="section-header">
+                    <h1>
+                        <i class="fas fa-qrcode"></i>
+                        QR Code Scanner
+                    </h1>
+                    <div class="actions">
+                        <button class="action-btn primary" id="start-qr-scan-btn">
+                            <i class="fas fa-camera"></i>
+                            <span>Start Camera Scan</span>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="scanner-content">
+                    <div class="scanner-info-cards">
+                        <div class="info-card">
+                            <div class="info-icon">
+                                <i class="fas fa-mobile-alt"></i>
+                            </div>
+                            <div class="info-content">
+                                <h3>Mobile Scanning</h3>
+                                <p>Use your device camera to scan QR codes for quick attendance tracking</p>
+                            </div>
+                        </div>
+
+                        <div class="info-card">
+                            <div class="info-icon">
+                                <i class="fas fa-shield-check"></i>
+                            </div>
+                            <div class="info-content">
+                                <h3>Secure Validation</h3>
+                                <p>All QR codes are validated for authenticity and expiration</p>
+                            </div>
+                        </div>
+
+                        <div class="info-card">
+                            <div class="info-icon">
+                                <i class="fas fa-clock"></i>
+                            </div>
+                            <div class="info-content">
+                                <h3>Real-time Processing</h3>
+                                <p>Instant attendance recording with timestamp verification</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="scanner-instructions">
+                        <h3>How to scan QR codes:</h3>
+                        <ol>
+                            <li>Click "Start Camera Scan" to open the scanner</li>
+                            <li>Allow camera permissions when prompted</li>
+                            <li>Position the QR code within the scanning frame</li>
+                            <li>Wait for automatic detection and processing</li>
+                            <li>Confirm the attendance action when prompted</li>
+                        </ol>
+                    </div>
+
+                    <div class="scanner-stats" id="scanner-stats">
+                        <h3>Scanner Statistics</h3>
+                        <div class="stats-grid">
+                            <div class="stat-item">
+                                <span class="stat-value" id="total-scans">0</span>
+                                <span class="stat-label">Total Scans</span>
+                            </div>
+                            <div class="stat-item">
+                                <span class="stat-value" id="successful-scans">0</span>
+                                <span class="stat-label">Successful</span>
+                            </div>
+                            <div class="stat-item">
+                                <span class="stat-value" id="failed-scans">0</span>
+                                <span class="stat-label">Failed</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -268,6 +362,9 @@
 
     <!-- Modals will be dynamically created by components -->
 
+    <!-- Supabase Configuration -->
+    <script src="../src/config/supabase-client.js"></script>
+
     <!-- Security Services -->
     <script src="../src/services/SecurityService.js"></script>
     <script src="../src/utils/PasswordMigration.js"></script>
@@ -278,6 +375,14 @@
     <script src="../src/services/StandardBarcodeGenerator.js"></script>
     <script src="../src/services/IDCardPDFGenerator.js"></script>
     <script src="../src/components/IDCardManager.js"></script>
+
+    <!-- Modern QR Code Services -->
+    <script src="../src/services/QRCodeService.js"></script>
+    <script src="../src/services/CameraQRScanner.js"></script>
+    <script src="../src/services/ApplicantQRService.js"></script>
+    <script src="../src/components/QRScannerUI.js"></script>
+    <script src="../src/components/QRCodeManager.js"></script>
+    <script src="../src/components/ApplicantQRManager.js"></script>
 
     <!-- User Database -->
     <script src="../modules/user-management/users-database.js"></script>
@@ -904,6 +1009,7 @@
                         'nav-activity': 'Activities',
                         'nav-profile': 'Profile',
                         'nav-reports': 'Reports',
+                        'nav-scanner': 'QR Scanner',
                         'nav-admin': 'Admin'
                     };
                     if (mobileNavTitle && sectionTitles[navId]) {
@@ -943,10 +1049,349 @@
                                 window.attendanceApp.initializeReportsCharts();
                             }
                         }, 100);
+                    } else if (navId === 'nav-scanner') {
+                        // QR Scanner section
+                        document.getElementById('scanner-section').classList.add('active');
+                        // Initialize scanner stats
+                        updateScannerStats();
                     }
                 });
             });
         });
+
+        // QR Code functionality
+        function initializeQRFunctionality() {
+            // QR Scanner button
+            const startScanBtn = document.getElementById('start-qr-scan-btn');
+            if (startScanBtn) {
+                startScanBtn.addEventListener('click', startQRScanning);
+            }
+
+            // Show QR Code button in profile
+            const showQRBtn = document.getElementById('show-qr-code-btn');
+            if (showQRBtn) {
+                showQRBtn.addEventListener('click', showUserQRCode);
+            }
+        }
+
+        // Start QR scanning
+        function startQRScanning() {
+            if (!window.qrScannerUI) {
+                alert('QR Scanner not available. Please refresh the page.');
+                return;
+            }
+
+            window.qrScannerUI.openScanner(
+                (scanResult) => handleQRScanSuccess(scanResult),
+                (error) => handleQRScanError(error)
+            );
+        }
+
+        // Handle successful QR scan
+        function handleQRScanSuccess(scanResult) {
+            console.log('QR Scan successful:', scanResult);
+
+            // Update scanner stats
+            updateScannerStats(true);
+
+            // Show attendance confirmation
+            showAttendanceConfirmation(scanResult);
+        }
+
+        // Handle QR scan error
+        function handleQRScanError(error) {
+            console.error('QR Scan error:', error);
+
+            // Update scanner stats
+            updateScannerStats(false);
+
+            // Show error notification
+            if (window.uiComponents) {
+                window.uiComponents.showToast(error, 'error', 'Scan Failed');
+            } else {
+                alert('Scan failed: ' + error);
+            }
+        }
+
+        // Show user's QR code
+        function showUserQRCode() {
+            const currentUser = window.userDatabase ? window.userDatabase.getCurrentUser() : null;
+
+            if (!currentUser) {
+                alert('User not found. Please log in again.');
+                return;
+            }
+
+            if (!window.qrCodeManager) {
+                alert('QR Code Manager not available. Please refresh the page.');
+                return;
+            }
+
+            window.qrCodeManager.showUserQRCode(currentUser.id);
+        }
+
+        // Show attendance confirmation
+        function showAttendanceConfirmation(scanResult) {
+            const userData = scanResult.data;
+            const isLegacy = scanResult.legacy || false;
+
+            const modal = document.createElement('div');
+            modal.className = 'attendance-confirmation-modal';
+            modal.innerHTML = `
+                <div class="confirmation-overlay"></div>
+                <div class="confirmation-container">
+                    <div class="confirmation-header">
+                        <h2>
+                            <i class="fas fa-user-check"></i>
+                            Attendance Confirmation
+                        </h2>
+                    </div>
+
+                    <div class="confirmation-content">
+                        <div class="user-info">
+                            <h3>${userData.name}</h3>
+                            <p>${userData.position || 'Position not specified'}</p>
+                            <p>${userData.department || 'Department not specified'}</p>
+                            ${isLegacy ? '<span class="legacy-badge">Legacy Barcode</span>' : '<span class="qr-badge">QR Code</span>'}
+                        </div>
+
+                        <div class="attendance-actions">
+                            <button class="attendance-btn time-in" onclick="recordAttendance('${userData.userId}', 'time-in')">
+                                <i class="fas fa-sign-in-alt"></i>
+                                Time In
+                            </button>
+                            <button class="attendance-btn time-out" onclick="recordAttendance('${userData.userId}', 'time-out')">
+                                <i class="fas fa-sign-out-alt"></i>
+                                Time Out
+                            </button>
+                        </div>
+
+                        <button class="cancel-btn" onclick="closeAttendanceModal()">Cancel</button>
+                    </div>
+                </div>
+            `;
+
+            // Add styles for attendance modal
+            const modalStyles = document.createElement('style');
+            modalStyles.textContent = `
+                .attendance-confirmation-modal {
+                    position: fixed;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    z-index: 10000;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+
+                .confirmation-overlay {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    background: rgba(0, 0, 0, 0.8);
+                }
+
+                .confirmation-container {
+                    position: relative;
+                    width: 90%;
+                    max-width: 400px;
+                    background: var(--card-bg, #2e3540);
+                    border-radius: 16px;
+                    overflow: hidden;
+                }
+
+                .confirmation-header {
+                    padding: 20px;
+                    background: linear-gradient(135deg, #ff7a45, #ff6b35);
+                    color: white;
+                    text-align: center;
+                }
+
+                .confirmation-content {
+                    padding: 20px;
+                    text-align: center;
+                }
+
+                .user-info {
+                    margin-bottom: 20px;
+                }
+
+                .user-info h3 {
+                    margin: 0 0 10px 0;
+                    color: var(--text-color, #ffffff);
+                }
+
+                .user-info p {
+                    margin: 5px 0;
+                    color: var(--text-secondary, #a0a0a0);
+                }
+
+                .legacy-badge, .qr-badge {
+                    display: inline-block;
+                    padding: 4px 8px;
+                    border-radius: 4px;
+                    font-size: 0.8rem;
+                    font-weight: 600;
+                    margin-top: 10px;
+                }
+
+                .legacy-badge {
+                    background: #6c757d;
+                    color: white;
+                }
+
+                .qr-badge {
+                    background: #28a745;
+                    color: white;
+                }
+
+                .attendance-actions {
+                    display: flex;
+                    gap: 15px;
+                    margin-bottom: 20px;
+                }
+
+                .attendance-btn {
+                    flex: 1;
+                    padding: 15px;
+                    border: none;
+                    border-radius: 8px;
+                    color: white;
+                    font-weight: 600;
+                    cursor: pointer;
+                    transition: all 0.3s ease;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 8px;
+                }
+
+                .attendance-btn.time-in {
+                    background: #28a745;
+                }
+
+                .attendance-btn.time-in:hover {
+                    background: #218838;
+                }
+
+                .attendance-btn.time-out {
+                    background: #dc3545;
+                }
+
+                .attendance-btn.time-out:hover {
+                    background: #c82333;
+                }
+
+                .cancel-btn {
+                    padding: 10px 20px;
+                    background: #6c757d;
+                    color: white;
+                    border: none;
+                    border-radius: 8px;
+                    cursor: pointer;
+                }
+            `;
+
+            document.head.appendChild(modalStyles);
+            document.body.appendChild(modal);
+
+            // Global functions for modal
+            window.recordAttendance = function(userId, action) {
+                // Record attendance
+                const timestamp = new Date().toISOString();
+                const time = new Date().toLocaleTimeString();
+
+                // Show success message
+                if (window.uiComponents) {
+                    window.uiComponents.showToast(
+                        `${userData.name} - ${action.replace('-', ' ')} recorded at ${time}`,
+                        'success',
+                        'Attendance Recorded'
+                    );
+                } else {
+                    alert(`Attendance recorded: ${action} at ${time}`);
+                }
+
+                closeAttendanceModal();
+            };
+
+            window.closeAttendanceModal = function() {
+                document.body.removeChild(modal);
+                document.head.removeChild(modalStyles);
+            };
+        }
+
+        // Update scanner statistics
+        function updateScannerStats(success = null) {
+            const totalScansEl = document.getElementById('total-scans');
+            const successfulScansEl = document.getElementById('successful-scans');
+            const failedScansEl = document.getElementById('failed-scans');
+
+            if (!totalScansEl) return;
+
+            // Get current stats from localStorage
+            let stats = JSON.parse(localStorage.getItem('qr_scanner_stats') || '{"total": 0, "successful": 0, "failed": 0}');
+
+            // Update stats if this is a new scan
+            if (success !== null) {
+                stats.total++;
+                if (success) {
+                    stats.successful++;
+                } else {
+                    stats.failed++;
+                }
+                localStorage.setItem('qr_scanner_stats', JSON.stringify(stats));
+            }
+
+            // Update UI
+            totalScansEl.textContent = stats.total;
+            successfulScansEl.textContent = stats.successful;
+            failedScansEl.textContent = stats.failed;
+        }
+
+        // Initialize QR functionality when DOM is ready
+        document.addEventListener('DOMContentLoaded', () => {
+            initializeQRFunctionality();
+
+            // Generate QR codes for existing users
+            setTimeout(() => {
+                generateQRCodesForExistingUsers();
+            }, 2000);
+        });
+
+        // Generate QR codes for existing users
+        async function generateQRCodesForExistingUsers() {
+            if (!window.qrCodeService || !window.userDatabase) {
+                console.log('QR services not ready yet');
+                return;
+            }
+
+            try {
+                console.log('🔄 Generating QR codes for existing users...');
+                const result = await window.qrCodeService.generateAllUserQRCodes();
+
+                if (result.success) {
+                    console.log(`✅ QR codes generated: ${result.successful}/${result.total} users`);
+
+                    // Show notification if UI components are available
+                    if (window.uiComponents) {
+                        window.uiComponents.showToast(
+                            `QR codes generated for ${result.successful} users`,
+                            'success',
+                            'QR Codes Ready'
+                        );
+                    }
+                } else {
+                    console.error('❌ Failed to generate QR codes:', result.error);
+                }
+            } catch (error) {
+                console.error('❌ Error generating QR codes:', error);
+            }
+        }
     </script>
 
     <!-- Modern UI Components -->
