--- a/core/index.html
+++ b/core/index.html
@@ -11,15 +11,15 @@
     <title>AG&P Attendance Tracking System</title>
 
     <!-- PWA Manifest -->
-    <link rel="manifest" href="../config/manifest.json">
+    <link rel="manifest" href="/config/manifest.json">
 
     <!-- Apple Touch Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="../assets/icons/icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../assets/icons/icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/icons/icon-192x192.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/icon-192x192.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="../assets/images/AGP-Logo.png">
+    <link rel="icon" type="image/x-icon" href="/assets/images/AGP-Logo.png">
 
     <!-- External Dependencies -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -33,24 +33,24 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.3/dist/umd/supabase.min.js"></script>
 
     <!-- Modular Stylesheets -->
-    <link rel="stylesheet" href="../src/styles/variables.css">
-    <link rel="stylesheet" href="../src/styles/modern-ui.css">
-    <link rel="stylesheet" href="../src/styles/base.css">
-    <link rel="stylesheet" href="../src/styles/components.css">
-    <link rel="stylesheet" href="../src/styles/responsive.css">
-    <link rel="stylesheet" href="../src/styles/mobile-optimized.css">
-    <link rel="stylesheet" href="../modules/intern-management/intern-management-dashboard.css">
-    <link rel="stylesheet" href="../modules/user-management/role-management.css">
+    <link rel="stylesheet" href="/src/styles/variables.css">
+    <link rel="stylesheet" href="/src/styles/modern-ui.css">
+    <link rel="stylesheet" href="/src/styles/base.css">
+    <link rel="stylesheet" href="/src/styles/components.css">
+    <link rel="stylesheet" href="/src/styles/responsive.css">
+    <link rel="stylesheet" href="/src/styles/mobile-optimized.css">
+    <link rel="stylesheet" href="/modules/intern-management/intern-management-dashboard.css">
+    <link rel="stylesheet" href="/modules/user-management/role-management.css">
 
     <!-- Preload Critical Resources -->
-    <link rel="preload" href="../assets/images/AGP-Logo.png" as="image">
-    <link rel="preload" href="../src/app.js" as="script">
+    <link rel="preload" href="/assets/images/AGP-Logo.png" as="image">
+    <link rel="preload" href="/src/app.js" as="script">
 </head>
 <body>
     <!-- Loading Screen -->
     <div id="loading-screen" class="loading-screen">
         <div class="loading-content">
-            <img src="../assets/images/AGP-Logo.png" alt="AG&P Logo" class="loading-logo">
+            <img src="/assets/images/AGP-Logo.png" alt="AG&P Logo" class="loading-logo">
             <div class="loading-spinner"></div>
             <p>Loading Attendance System...</p>
         </div>
@@ -82,7 +82,7 @@
         <aside class="sidebar" id="sidebar">
             <!-- Logo Section -->
             <div class="logo-container">
-                <img src="../assets/images/AGP-Logo.png" alt="AG&P Logo" class="sidebar-logo">
+                <img src="/assets/images/AGP-Logo.png" alt="AG&P Logo" class="sidebar-logo">
             </div>
 
             <!-- Main Navigation -->
@@ -363,38 +363,38 @@
     <!-- Modals will be dynamically created by components -->
 
     <!-- Supabase Configuration -->
-    <script src="../src/config/supabase-client.js"></script>
+    <script src="/src/config/supabase-client.js"></script>
 
     <!-- Security Services -->
-    <script src="../src/services/SecurityService.js"></script>
-    <script src="../src/utils/PasswordMigration.js"></script>
+    <script src="/src/services/SecurityService.js"></script>
+    <script src="/src/utils/PasswordMigration.js"></script>
 
     <!-- ID Card & Barcode Services -->
-    <script src="../src/services/IDCardGenerator.js"></script>
-    <script src="../src/services/BarcodeScanner.js"></script>
-    <script src="../src/services/StandardBarcodeGenerator.js"></script>
-    <script src="../src/services/IDCardPDFGenerator.js"></script>
-    <script src="../src/components/IDCardManager.js"></script>
+    <script src="/src/services/IDCardGenerator.js"></script>
+    <script src="/src/services/BarcodeScanner.js"></script>
+    <script src="/src/services/StandardBarcodeGenerator.js"></script>
+    <script src="/src/services/IDCardPDFGenerator.js"></script>
+    <script src="/src/components/IDCardManager.js"></script>
 
     <!-- Modern QR Code Services -->
-    <script src="../src/services/QRCodeService.js"></script>
-    <script src="../src/services/CameraQRScanner.js"></script>
-    <script src="../src/services/ApplicantQRService.js"></script>
-    <script src="../src/components/QRScannerUI.js"></script>
-    <script src="../src/components/QRCodeManager.js"></script>
-    <script src="../src/components/ApplicantQRManager.js"></script>
+    <script src="/src/services/QRCodeService.js"></script>
+    <script src="/src/services/CameraQRScanner.js"></script>
+    <script src="/src/services/ApplicantQRService.js"></script>
+    <script src="/src/components/QRScannerUI.js"></script>
+    <script src="/src/components/QRCodeManager.js"></script>
+    <script src="/src/components/ApplicantQRManager.js"></script>
 
     <!-- User Database -->
-    <script src="../modules/user-management/users-database.js"></script>
+    <script src="/modules/user-management/users-database.js"></script>
 
     <!-- Role Management -->
-    <link rel="stylesheet" href="../modules/user-management/role-management.css">
-    <script src="../modules/user-management/role-management.js"></script>
+    <link rel="stylesheet" href="/modules/user-management/role-management.css">
+    <script src="/modules/user-management/role-management.js"></script>
 
     <!-- Intern Management System -->
-    <link rel="stylesheet" href="../modules/intern-management/intern-management-dashboard.css">
-    <script src="../modules/intern-management/intern-management-dashboard.js"></script>
-    <script src="../modules/intern-management/intern-dashboard-simple.js"></script>
+    <link rel="stylesheet" href="/modules/intern-management/intern-management-dashboard.css">
+    <script src="/modules/intern-management/intern-management-dashboard.js"></script>
+    <script src="/modules/intern-management/intern-dashboard-simple.js"></script>
 
     <!-- Application Scripts -->
     <script src="app-browser.js"></script>
