Simplify dashboard - remove complex dependencies that cause loading issues
Only loading essential services:
- SecurityService.js
- PasswordMigration.js
- users-database.js
- app-browser.js (self-contained)

This should fix the dashboard loading issue.

--- a/core/index.html
+++ b/core/index.html
@@ -362,39 +362,10 @@
 
     <!-- Modals will be dynamically created by components -->
 
-    <!-- Supabase Configuration -->
-    <script src="/src/config/supabase-client.js"></script>
-
-    <!-- Security Services -->
+    <!-- Essential Services Only -->
     <script src="/src/services/SecurityService.js"></script>
     <script src="/src/utils/PasswordMigration.js"></script>
-
-    <!-- ID Card & Barcode Services -->
-    <script src="/src/services/IDCardGenerator.js"></script>
-    <script src="/src/services/BarcodeScanner.js"></script>
-    <script src="/src/services/StandardBarcodeGenerator.js"></script>
-    <script src="/src/services/IDCardPDFGenerator.js"></script>
-    <script src="/src/components/IDCardManager.js"></script>
-
-    <!-- Modern QR Code Services -->
-    <script src="/src/services/QRCodeService.js"></script>
-    <script src="/src/services/CameraQRScanner.js"></script>
-    <script src="/src/services/ApplicantQRService.js"></script>
-    <script src="/src/components/QRScannerUI.js"></script>
-    <script src="/src/components/QRCodeManager.js"></script>
-    <script src="/src/components/ApplicantQRManager.js"></script>
-
-    <!-- User Database -->
     <script src="/modules/user-management/users-database.js"></script>
-
-    <!-- Role Management -->
-    <link rel="stylesheet" href="/modules/user-management/role-management.css">
-    <script src="/modules/user-management/role-management.js"></script>
-
-    <!-- Intern Management System -->
-    <link rel="stylesheet" href="/modules/intern-management/intern-management-dashboard.css">
-    <script src="/modules/intern-management/intern-management-dashboard.js"></script>
-    <script src="/modules/intern-management/intern-dashboard-simple.js"></script>
 
     <!-- Application Scripts -->
     <script src="app-browser.js"></script>
